# DanPaVM

./: .gitignore  CMakeLists.txt  DOC.md  README.md  dan_pa_vm.c  dan_pa_vm.h  dpvm_op_functions.c  dpvm_op_functions.h  dpvm_op_functions_list.h  dpvm_op_pointers.h  dpvm_opcodes.h  main.c
src/: gc.c  instructions.h  interp.c  interp_math_impl.h  main.c  rand.c  syscalls.c  syscalls.h  vm.c  vm.h
